[260116] feat: 메인 페이지에서 사용자 프로필 화면으로 이동하는 기능 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -76,7 +76,7 @@
                     <a class="nav-link" href="/chat-room"><img th:src="@{/images/talk.png}" width="40" height="40" title="채팅"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/api/login"><img th:src="@{/images/profile.png}" width="40" height="40" title="프로필"></a>
+                    <a class="nav-link" href="/profile"><img th:src="@{/images/profile.png}" width="40" height="40" title="프로필"></a>
                 </li>
             </ul>
         </div>
